2012-09-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK][CGL] Comment clean-up

2012-03-07  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.2.0

2012-03-04  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] OpenID login fails if trailing slash is missing (synchro from TYPO3)

2012-02-24  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Admin flag is not synchronized
	* [TASK] Synchronize language for Backend users
	* [TASK] Synchronize start- and end-time for Backend users

2012-02-23  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.1.0
	* [FEATURE] Add support for short OpenID authentication

2012-01-27  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Do not synchronize deleted administrator accounts
	* [TASK] Change PHP dependency (5.2 instead of 5.3)

2012-01-26  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 1.0.0
	* [TASK][DOC] Add administrator documentation
	* [TASK] Add debugging information and syslog messages
	* [TASK] Kickstart the extension